--- a/carrinho.html
+++ b/carrinho.html
@@ -102,6 +102,7 @@
       </div>
     </div>
   </main>
+  <!--initial commit-->
 
   <!-- Footer -->
   <footer class="bg-gray-100 py-6 mt-12 text-center text-gray-500 text-sm">
