--- a/index.html
+++ b/index.html
@@ -83,14 +83,12 @@
     <nav class="bg-white shadow-sm py-3 px-2">
       <div class="container mx-auto">
         <div class="flex items-center space-x-4 overflow-x-auto pb-2">
-          <a href="#" class="whitespace-nowrap hover:text-primary text-sm sm:text-base">Electronics</a>
-          <a href="#" class="whitespace-nowrap hover:text-primary text-sm sm:text-base">Fashion</a>
-          <a href="#" class="whitespace-nowrap hover:text-primary text-sm sm:text-base">Home</a>
-          <a href="#" class="whitespace-nowrap hover:text-primary text-sm sm:text-base">Beauty</a>
-          <a href="#" class="whitespace-nowrap hover:text-primary text-sm sm:text-base">Sports</a>
-          <a href="#" class="whitespace-nowrap hover:text-primary text-sm sm:text-base">Toys</a>
-          <a href="#" class="whitespace-nowrap hover:text-primary text-sm sm:text-base">Food</a>
-          <a href="#" class="whitespace-nowrap hover:text-primary text-sm sm:text-base">Pets</a>
+          <a href="mobile.html" class="whitespace-nowrap hover:text-primary text-sm sm:text-base">Mobile & Gadgets</a>
+          <a href="computers.html" class="whitespace-nowrap hover:text-primary text-sm sm:text-base">Computers</a>
+          <a href="home-appliances.html" class="whitespace-nowrap hover:text-primary text-sm sm:text-base">Home Appliances</a>
+          <a href="fashion.html" class="whitespace-nowrap hover:text-primary text-sm sm:text-base">Fashion</a>
+          <a href="beauty.html" class="whitespace-nowrap hover:text-primary text-sm sm:text-base">Beauty</a>
+          <a href="books.html" class="whitespace-nowrap hover:text-primary text-sm sm:text-base">Books</a>
         </div>
       </div>
     </nav>
